--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
-      - run: python simple-bcrypt.py
+      - run: python simplebcrypt.py
       - run: echo Done
