--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
+      - run: pip install bcrypt
       - run: echo pass | python simplebcrypt.py
       - run: echo Done
