--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,7 +1,7 @@
 name: Run
 on: [push]
 jobs:
-  check-bats-version:
+  test-bcrypt:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
