--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -7,5 +7,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install bcrypt
-      - run: test.py
+      - run: python test.py
       - run: echo Done
